--- a/app/views/app-nuevaLocacion.html
+++ b/app/views/app-nuevaLocacion.html
@@ -35,7 +35,7 @@
                                     <label for="ColoniaLoc">Colonia:</label>
                                 </div>
                                 <div class="col-md-8">
-                                    <input class="form-control"  id="ColoniaLoc" type="text" name="ColoniaLoc" ng-model="locacion.neighborhood" required />
+                                    <input class="form-control"  id="ColoniaLoc" type="text" name="ColoniaLoc" ng-model="locacion.neighboorhood" required />
                                 </div>
                             </div>                            
                         </div>
