--- a/app/views/app-nuevoProducto.html
+++ b/app/views/app-nuevoProducto.html
@@ -53,7 +53,7 @@
         </div>
         <div class="row">
           <div class="col-sm-6">
-                <input type="submit" class="btn btn-primary pull-right" value="Crear Producto" style="background-color:#93351F;border-color:#93351F;">
+                <input type="submit" class="btn btn-primary pull-right" value="Continuar" style="background-color:#93351F;border-color:#93351F;">
               <a href="#/app-vistaProductos" style="padding: 7px 15px;" class="pull-right">Cancelar</a>
           </div>
         </div>
