--- a/app/views/app-editarClienteEnvio.html
+++ b/app/views/app-editarClienteEnvio.html
@@ -5,12 +5,12 @@
   border-style: solid;
 }
 .top-buffer { margin-top:20px; }
-    </style>s
+    </style>
 <div ng-controller="CtrlEditarDirEnvio">
   <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
       <li class=""><a href="#/app-vistaClientes">Clientes</a></li>
-      <li class=""><a href="#/app-vistaClienteInd/{{clientes.$id}}">Cliente: {{clientes.nombre}}</a></li>
+      <li class=""><a href="#/app-vistaClienteInd/{{sendOrd.id}}">Cliente: {{sendOrd.client.nombre}}</a></li>
       <li class="active"><a href="#">Editar Envio</a></li>
   </ol>
   <div class="page-heading">
@@ -57,7 +57,7 @@
                                     <label for="EntCliEnEd">Entidad:</label>
                                 </div>
                                 <div class="col-md-8">
-                                    <input id="EntCliEnEd" type="text" name="desc" ng-model="sendOrd.entity"  required />
+                                    <input class="form-control"  id="EntCliEnEd" type="text" name="desc" ng-model="sendOrd.entity"  required />
                                 </div>
                             </div>  
                         </div>
@@ -86,7 +86,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <input type="submit" class="btn btn-primary pull-right" value="Guardar" style="background-color:#93351F;border-color:#93351F;">
-                        <a style="padding: 7px 15px;" class="pull-right" href="#/app-vistaClienteInd/{{clientes.$id}}">Cancelar</a>
+                        <a style="padding: 7px 15px;" class="pull-right" href="#/app-vistaClienteInd/{{sendOrd.client.id}}">Cancelar</a>
                     </div>
                 </div>
             </div>
