--- a/app/views/app-vistaCargarOrden.html
+++ b/app/views/app-vistaCargarOrden.html
@@ -10,6 +10,7 @@
 </style>
   <ol class="breadcrumb">
 <div ng-controller="CtrlCargarOrden">
+  <ol class="breadcrumb">
       <li class=""><a href="#/">Home</a></li>
       <li class=""><a href="#/app-vistaLocacion/{{almacenOrigen.location.id}}"> {{almacenOrigen.location.name}} </a></li>
       <li class=""><a href="#/app-vistaAlmacen/{{almacenOrigen.id}}">Almacen {{almacenOrigen.name}}</a></li>
