--- a/app/views/app-vistaClienteInd.html
+++ b/app/views/app-vistaClienteInd.html
@@ -91,7 +91,7 @@
                             </tr>
                         </thead>
                         <tbody >
-                            <tr ng-repeat="(id, name) in clientes.send_orders">
+                            <tr ng-repeat="name in clientes.send_orders">
                               <td>{{ name.entity }}</td>
                               <td>{{ name.municipalty }}</td>
                               <td>{{ name.neighborhood }}</td>
