--- a/app/views/app-nuevaOrdenC.html
+++ b/app/views/app-nuevaOrdenC.html
@@ -33,12 +33,12 @@ hr{    border-top-color: #455A64}
       <div class="row borde-input">
         <div class="col-md-12">
           <div class="row ">
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 1em;">
               <div class="form-group">
                 <span>No. de &oacute;rden: <strong>{{infoOrden.number}}</strong></span>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 1em;">
               <div class="form-group">
                 <div class="row">
                   <div class="col-md-3">
@@ -52,7 +52,7 @@ hr{    border-top-color: #455A64}
                 </div>
               </div>         
             </div> 
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 1em;">
               <div class="form-group">
                 <div class="row">
                   <div class="col-md-2">
