--- a/app/views/app-nuevaOrdenV.html
+++ b/app/views/app-nuevaOrdenV.html
@@ -33,19 +33,19 @@ hr{    border-top-color: #455A64}
       <div class="row borde-input">
         <div class="col-md-12">
           <div class="row ">
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 1em;">
               <div class="form-group">
                 <span>No. de &oacute;rden: <strong>{{infoOrden.number}}</strong></span>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 1em;">
               <div class="form-group">
                 <label class="radio-inline">
                   <input type="checkbox" name="billing" ng-model="billing" ng-value="Y"> Facturación
                 </label>
               </div>         
             </div> 
-            <div class="col-md-4">
+            <div class="col-md-4" style="padding: 1em;">
               <div class="form-group">
                 <div class="row">
                   <div class="col-md-2">
@@ -110,7 +110,7 @@ hr{    border-top-color: #455A64}
             <div class="col-sm-4">
               <select id="ordenAlmacen" name="ordenAlmacen" class="form-control" ng-change="updateInfoAlmacen()" ng-model="ordenAlmacenId">
                 <option value="">Selecciona una Almacen</option>
-                <option ng-repeat="option in warehouses_Loc" value="{{option.id}}">{{option.name}}</option>
+                <option ng-repeat="option in warehouses_Loc" ng-show="option.name!='Global'" value="{{option.id}}">{{option.name}}</option>
               </select>
             </div>
             <div class="col-sm-4">
