--- a/app/views/app-vistaOrdenVInd.html
+++ b/app/views/app-vistaOrdenVInd.html
@@ -4,11 +4,7 @@
   border-style: solid;
 }
 .top-buffer { margin-top:20px; }
-.bor-tab{border-style: solid;
-    border-width: 1px;}
-.row-head{text-align: center;
-    background-color: #DDD;
-}
+
 .row-cont{text-align: center;}
 hr{    border-top-color: #455A64}
 .TotAltura{    line-height: 47px;}
@@ -112,8 +108,8 @@ hr{    border-top-color: #455A64}
               </div>
             </div>
           </div>
-          <div class="row no-gutter row-head top-buffer">
-            <div class="col-sm-12 bor-tab">
+          <div class="row no-gutter  top-buffer">
+            <div class="col-sm-12 ">
               <table class="table table-hover">
                 <thead>
                   <tr class="info">
@@ -169,9 +165,7 @@ hr{    border-top-color: #455A64}
                 </div>
               </div>
             </div>
-          </div>
-          
-          
+          </div>  
         </div>
       </div>
   </div>
