Aqui se agregan las mordenes de ajuste

--- a/app/views/app-defVariantes.html
+++ b/app/views/app-defVariantes.html
@@ -30,7 +30,7 @@
         <div class="row ">
           <div class="col-md-12">
             <h3>Crear variantes de productos</h3>
-            <p>Selecciona los criterios para definir las variantes del producto. Por ejemplo color y tamaño te dara todas las combinaciones para tus variantes. Cada variante se separa por coma.</p>
+            <p>Selecciona los criterios para definir las variantes del producto. Por ejemplo color y tamaño. Separa cada variante con una coma.</p>
           </div>
         </div>
         <div class="row ">
