--- a/app/views/app-vistaProveedor.html
+++ b/app/views/app-vistaProveedor.html
@@ -27,7 +27,7 @@
                             <th>Nombre</th> 
                             <th>Correo</th> 
                             <th>Divisa</th> 
-                            <th>P&acute;gina</th> 
+                            <th>P&aacute;gina</th> 
                             <th>Telefono</th> 
                           </tr>
                         </thead>
